--- a/BallClub/BallClub/Storyboards/Friends.storyboard
+++ b/BallClub/BallClub/Storyboards/Friends.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CKL-ZQ-cNk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CKL-ZQ-cNk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -227,7 +227,6 @@
         <!--Navigation Controller-->
         <scene sceneID="kxi-XS-SHB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yxu-Z2-5AD" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CKL-ZQ-cNk" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="UVB-Vg-Dj7">
@@ -241,6 +240,7 @@
                         <segue destination="GwD-Yj-HCh" kind="relationship" relationship="rootViewController" id="O57-3h-RMQ"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yxu-Z2-5AD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1110" y="352"/>
         </scene>
